--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    justify-content: space-evenly;
 }
 
 .fancy-background {
+    z-index: -1;
     position: fixed;
+    top: 0;
     width: 100%;
     height: 100vh;
 }
@@ -17,7 +20,7 @@
 .left-line,
 .right-line {
     position: absolute;
-    width: 2px;
+    width: 5px;
     height: 100vh;
     background-color: gold;
 }
@@ -32,12 +35,135 @@
 
 .left-line img,
 .right-line img {
-    width: 20px;
+    width: 35px;
     bottom: 200px;
     left: -10px;
     position: absolute;
+    text-align: center;
+}
+
+.boards-container {
+    margin-top: 80px;
+    justify-content: space-evenly;
+
+    line-height: 1.5;
+    padding: 0px;
 }
 
 .board {
-    background-color: cyan;
+    margin: 0 auto;
+    padding-bottom: 30px;
+    padding-top: 15px;
+    width: 65%;
+    background-color: white;
+    line-height: 1.5;
+    color: black;
+    border: 2px solid #737373;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.WebsiteName {
+    text-align: center;
+    margin-top: 80px;
+    font-family: "Cinzel Decorative";
+    font-size: 30px;
+    justify-content: space-evenly;
+    position: relative; /* Add this line */
+}
+
+.WebsiteName::after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -2px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50%;
+    height: 2px;
+    background-color: gold;
+    text-align: center;
+    margin-top: 80px;
+    font-family: "Cinzel Decorative";
+    font-size: 30px;
+    justify-content: space-evenly;
+}
+
+.year:nth-of-type(1)::after {
+    content: "";
+    display: block;
+    position: relative;
+    bottom: -3x;
+    width: 15%;
+    height: 2px;
+    background-color: gold;
+    margin: 0 auto;
+}
+
+.year:nth-of-type(2)::after {
+    content: "";
+    display: block;
+    position: relative;
+    bottom: -3px;
+    width: 15%;
+    height: 2px;
+    background-color: gold;
+    margin: 0 auto;
+}
+
+.name {
+    font-size: 35px;
+    color: #584910;
+    flex-basis: 48%;
+    text-align: center;
+    padding-top: 3%;
+    line-height: 5%;
+    font-family: "Times New Roman", Times;
+}
+
+.year {
+    padding: 5px;
+    flex-basis: 48%;
+    font-size: 42px;
+    color: black;
+    padding: 5px;
+    font-family: "Cinzel Decorative";
+}
+
+.title {
+    flex-basis: 48%;
+    padding-left: 50%;
+    font-size: 23px;
+    color: #bc9c22;
+    padding: 5px;
+    padding-bottom: 5%;
+    font-family: "Times New Roman", Times;
+}
+
+.people {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.WebsiteName {
+    text-align: center;
+    margin-top: 80px; /* Adjust this value as needed */
+    margin-bottom: 0px; /* Adjust this value as needed */
+    font-family: "Cinzel Decorative";
+    font-size: 30px;
+}
+
+.board {
+    margin: 0 auto;
+    padding-bottom: 20px; /* Adjust this value as needed */
+    padding-top: 15px;
+    width: 65%;
+    background-color: white;
+    line-height: 1.5;
+    color: black;
+    border: 2px solid #737373;
+    text-align: center;
+    margin-bottom: 40px;
+    justify-content: space-evenly; /* Adjust this value as needed */
 }
