--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .WebsiteName {
@@ -166,51 +168,4 @@
     text-align: center;
     margin-bottom: 40px;
     justify-content: space-evenly; /* Adjust this value as needed */
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.fancy-background {
-    z-index: -1;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-}
-
-.fancy-elements-container {
-    position: relative;
-}
-
-.left-line,
-.right-line {
-    position: absolute;
-    width: 2px;
-    height: 100vh;
-    background-color: gold;
-}
-
-.left-line {
-    left: 100px;
-}
-
-.right-line {
-    right: 100px;
-}
-
-.left-line img,
-.right-line img {
-    width: 20px;
-    bottom: 200px;
-    left: -10px;
-    position: absolute;
-}
-
-.board {
-    background-color: cyan;
-    margin: 16px;
 }
