--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@
     bottom: -3px;
     width: 15%;
     height: 2px;
-    background-color: gold;
+    background-color: #ffd700;
     margin: 0 auto;
 }
 
@@ -112,13 +112,9 @@
 }
 
 .people {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 16px;
-    align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
 }
 
 .WebsiteName {
@@ -131,7 +127,7 @@
 
 .board {
     margin: 0 auto;
-    padding-bottom: 20px; /* Adjust this value as needed */
+    padding-bottom: 100px; /* Adjust this value as needed */
     padding-top: 15px;
     width: 65%;
     background-color: white;
@@ -148,7 +144,22 @@
     flex-direction: column;
 }
 
+.loading {
+    display: flex;
+    margin-top: 64px;
+}
+
 @media screen and (max-width: 600px) {
+    .people {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 32px;
+    }
+
+    .board {
+        padding-bottom: 80px;
+    }
+
     h1 {
         font-size: 28px;
     }
@@ -159,5 +170,8 @@
 
     .year {
         font-size: 24px;
+    }
+    .loading img {
+        width: 128px;
     }
 }
