--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     justify-content: space-evenly;
 }
 
+body {
+    background-color: white;
+}
+
 .fancy-background {
     z-index: -1;
     position: fixed;
